# boilerplate-adk

./: .gitignore  pyproject.toml
ai/: README.md  pyproject.toml  requirements.txt
ai/ci/: cloud-build.yaml  cloud-run.yaml  cloudbuild.yaml  skaffold.yaml
ai/scripts/: deploy.py
ai/src/: __init__.py  agent.py  config.py  main.py
api/: .gitignore  pyproject.toml
api/ci/: cloud-run.yaml  cloudbuild.yaml  skaffold.yaml
api/src/: main.py
api/src/dependencies/: __init__.py  adk_runner.py  adk_session.py  agent.py  config.py  database.py  logger.py  tracer.py
api/src/repositories/: __init__.py
api/src/routers/: __init__.py  chat_router.py
api/src/schemas/: __init__.py  reply_schema.py
api/src/services/: __init__.py  chat_service.py
ci/: Dockerfile  cloud-build.yaml
docs/: agent_development.md  architecture.md  deployment.md  getting_started.md  observability.md
src/: __init__.py  main.py
